首頁刻完加動態

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -2,6 +2,10 @@
 @import "./helper/variables";
 @import "./helper/menu";
 @import "./helper/indexCSS";
+@import "./helper/footer";
+@import "./helper/btn";
 @import "../../node_modules/bootstrap/scss/mixins";
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;700&family=Roboto:wght@300;400;700&display=swap');
