--- a/src/assets/helper/_footer.scss
+++ b/src/assets/helper/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding: 60px 10% 10px 10%;
+    padding: 60px 5% 10px 5%;
     background: #1E1E1E;
     color: #828282;
     text-align: center;
@@ -17,12 +17,12 @@
     // 表格行列反轉
     tr { display: block; float: left; }
     th, td {
-        padding: 0rem 1.5rem;
+        padding: 0;
         padding-bottom: 6px;
         font-weight: 100;
-        display: block;
         a {
             text-decoration: none;
+            display: block;
         }
     }
 }
@@ -33,4 +33,13 @@
 
 .copyright {
     font-size: 0.85em;
+}
+
+@media screen and (max-width:768px) {
+    .footer img {
+        display: none;
+    }
+    .mapLink {
+        width: 50% !important;
+    }
 }
