--- a/src/assets/helper/_indexCSS.scss
+++ b/src/assets/helper/_indexCSS.scss
@@ -62,7 +62,7 @@
     font-size: 1.25em;
     border-radius: 15px;
     width: 147px;
-    opacity: 1;
+    opacity: 0;
     img {
         padding-bottom: 13px;
     }
@@ -106,6 +106,7 @@
 .feature {
     background: linear-gradient(180deg, #000F28 0%, #4B178E 100%);
     padding: 75px 0;
+    overflow: hidden;
 }
 .FeatureGroup {
     flex-direction: column;
@@ -157,5 +158,14 @@
         padding: 27px 18%;
         margin: 0;
         text-align: left;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .saleItem ul {
+        width: 90%;
+    }
+    .FeatureGroup {
+        width: 50%;
     }
 }
