--- a/src/assets/helper/_btn.scss
+++ b/src/assets/helper/_btn.scss
@@ -43,3 +43,11 @@
         margin-left: 0;
     }
 }
+
+.normalBtn {
+    background: #9747FF;
+    border-radius: 26px;
+    padding: 16px 40px;
+    border: none;
+    color: #FFFFFF;
+}
