--- a/src/assets/helper/_footer.scss
+++ b/src/assets/helper/_footer.scss
@@ -35,11 +35,25 @@
     font-size: 0.85em;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:820px) {
     .footer img {
         display: none;
     }
     .mapLink {
         width: 50% !important;
+    }
+}
+
+@media screen and (max-width:425px) {
+    .footer {
+        padding: 50px 5% 10px 5%;
+    }
+    .mapLink {
+        width: 307px !important;
+        margin: 0 auto;
+    }
+    .company {
+        margin: 20px auto;
+        text-align: center;
     }
 }
