--- a/src/assets/helper/_indexCSS.scss
+++ b/src/assets/helper/_indexCSS.scss
@@ -161,11 +161,64 @@
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:820px) {
     .saleItem ul {
         width: 90%;
     }
     .FeatureGroup {
         width: 50%;
+    }
+    .FeatureList h6 {
+        padding-right: 0;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .banner {
+        background: url(/public/ffxiv_banner_m.jpg) no-repeat center center / cover;
+    }
+    .bannerBox > .bannerText {
+        top: 480px;
+        width: 85%;
+        left: 5%;
+        text-shadow: 0 0 5px black;
+    }
+    .saleItemList {
+        margin-bottom: 20px;
+    }
+    .feature {
+        flex-direction: column;
+    }
+    .FeatureTitle {
+        max-width: 100%;
+        writing-mode: unset;
+        align-items: flex-start;
+        margin: 0 auto;
+        flex-direction: column;
+        margin-bottom: 3em;
+        h5 {
+            padding-right: 0px;
+            margin: 0 auto;
+        }
+        img {
+            position: absolute;
+            left: -230px;
+            top: -35px;
+        }
+    }
+    .FeatureTitle::after {
+        transform: rotate(0deg);
+        right: auto;
+        left: 20%;
+    }
+    .FeatureGroup {
+        width: 90%;
+        margin: 0 auto;
+    }
+    .FeatureList {
+        background: #000f29b3 !important;
+        p {
+            padding: 25px 9%;
+        }
     }
 }
