--- a/src/assets/helper/_login.scss
+++ b/src/assets/helper/_login.scss
@@ -1,11 +1,19 @@
 .loginBox {
-    width: 80%;
     height: 100vh;
     background: linear-gradient(180deg, #000F28 38.33%, #9747FF 150.18%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .loginImg {
     background: url(/public/loginImg.jpeg) no-repeat center center / cover;
+    border-radius: 15px 0px 0px 15px;
+}
+
+.enterUserFlex {
+    width: 308px;
+    margin: 0 auto;
 }
 
 .enterUser {
@@ -20,13 +28,13 @@
         color: #fff;
         font-weight: 700;
         font-size: 2em;
-        padding-top: 2em;
+        padding-top: 1.5em;
     }
     h3 {
         color: rgba(255, 255, 255, 0.5);
         font-weight: 700;
         font-size: 1.25em;
-        padding-bottom: 4.5em;
+        padding-bottom: 72px;
     }
 }
 
@@ -44,13 +52,13 @@
 }
 
 .inputModel {
-    max-width: 308px;
     margin: 0 auto;
     input {
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 0 5px 5px 0;
         border: none ;
         transition: all 0.3s ease;
+        color: #fff;
         &::placeholder {
             color: #fff;
         }
@@ -61,6 +69,92 @@
             background-color: rgba(255, 255, 255, 0.4);
             border: none;
             box-shadow:none;
+            color: #fff;
         }
+        &:-webkit-autofill,
+        :-webkit-autofill:active {
+            -webkit-box-shadow: 0 0 0 200px #4b178eb8 inset;
+            -webkit-text-fill-color: #fff;
+        }
+    }
+}
+
+.forgetPassword a {
+    color: #fff;
+    &:hover {
+        color: #9747FF;
+    }
+}
+
+.mobileSignBtn {
+    display: none;
+}
+
+.bookMark {
+    display: flex;
+    flex-direction: column;
+    width: 54px !important;
+    a {
+        display: block;
+        padding: 37px 18px;
+        color: #fff;
+        text-decoration: none;
+        line-height: 1.3em;
+        background-color: #31026F;
+        border-radius: 0px 15px 15px 0px;
+        transition: all 0.3s ease;
+        &:hover {
+            background-color: #240052;
+            color: #fff;
+        }
+    }
+    a:first-child {
+        background-color: #4B178E;
+        pointer-events: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .enterUserFlex {
+        width: 280px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .loginBox {
+        min-height: 100vh;
+        height: auto;
+    }
+    .loginBox form {
+        width: 97%;
+        margin: 0 auto;
+    }
+    .loginImg {
+        height: 200px;
+        border-radius: 15px 15px 0 0;
+    }
+    .enterUser {
+        padding: 10px 0;
+        border-radius: 0px 0px 15px 15px;
+        margin-bottom: 30px;
+        h3 {
+            padding-bottom: 47px;
+        }
+    }
+    .bookMark {
+        display: none;
+    }
+    .enterUserFlex {
+        width: 100%;
+    }
+    .mobileSignBtn {
+        display: block;
+        width: 100%;
+        text-decoration: none;
+        color: #fff;
+        background: #240052;
+        border-radius: 26px;
+        padding: 16px 40px;
+        margin: 20px 0;
     }
 }
