--- a/src/assets/helper/_product.scss
+++ b/src/assets/helper/_product.scss
@@ -1,6 +1,6 @@
 .innerPage {
     padding-top: 80px;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .classFilter {
@@ -46,15 +46,37 @@
     .card-title {
         font-size: 1em;
         font-weight: 700;
-        margin-bottom: 0;
+        margin-bottom: 7px;
     }
     .card-subtitle {
         color: #828282;
         font-weight: 400;
+        line-height: 1em;
+        font-size: 0.75em;
+        white-space: pre-line;
+    }
+    .card-text {
+        margin-top: 5px;
+        line-height: 1.2em;
+        text-align: justify;
+        white-space: pre-line;
     }
     .card-footer {
         background-color: #fff;
         border-top: none;
         text-align: center;
+        padding: 0;
+    }
+    .btn {
+        border: none;
+        border-top: 1px solid #cdcdcd;
+        width: 100%;
+        border-radius: 0 0 5px 5px;
+        color: #9747FF;
+        padding: 10px 0;
+        &:hover {
+            background: #9747FF;
+            color: #fff;
+        }
     }
 }
