--- a/src/assets/helper/_product.scss
+++ b/src/assets/helper/_product.scss
@@ -9,15 +9,6 @@
     padding-right: 0px !important;
     padding: 72px 0px;
     text-align: center;
-    h3 {
-        color: #000F28;
-        vertical-align: middle;
-        line-height: 1em;
-        padding-bottom: 20px;
-        border-bottom: 1px solid #828282;
-        font-size: 1.25em;
-        font-weight: 700;
-    }
     ul {
         padding: 0;
     }
@@ -28,6 +19,7 @@
             color: #828282;
             font-weight: 700;
             padding: 33px 0 9px 0;
+            pointer-events: none;
         }
     }
     a {
@@ -39,6 +31,20 @@
             background: #C7C7C7;
         }
     }
+}
+
+.titleH3 {
+    color: #000F28;
+    vertical-align: middle;
+    line-height: 1em;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #828282;
+    font-size: 1.25em;
+    font-weight: 700;
+}
+
+.rightPage {
+    padding: 72px 5% !important;
 }
 
 .productsCard {
