--- a/src/assets/helper/_product.scss
+++ b/src/assets/helper/_product.scss
@@ -9,6 +9,10 @@
     padding-right: 0px !important;
     padding: 72px 0px;
     text-align: center;
+    h3 {
+        border-bottom: 1px solid #828282;
+        padding-bottom: 20px;
+    }
     ul {
         padding: 0;
     }
@@ -22,11 +26,13 @@
             pointer-events: none;
         }
     }
-    a {
-        display: block;
+    button {
+        width: 100%;
         padding: 9px 0px;
         text-decoration: none;
         color: #1E1E1E;
+        border: none;
+        background: none;
         &:hover {
             background: #C7C7C7;
         }
@@ -37,14 +43,39 @@
     color: #000F28;
     vertical-align: middle;
     line-height: 1em;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #828282;
     font-size: 1.25em;
     font-weight: 700;
+    margin-bottom: 0;
+}
+
+.searchBar {
+    border: 1px solid #D9D9D9;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 18px;
+    padding: 7px 20px;
+    input {
+        border: none;
+        padding-left: 10px;
+        &:focus-visible {
+            outline: none;
+        }
+    }
+}
+
+.pageTitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #828282;
+    h3 {
+        width: 50%;
+    }
 }
 
 .rightPage {
-    padding: 72px 5% !important;
+    padding: 53px 5% !important;
 }
 
 .productsCard {
