--- a/src/assets/helper/_menu.scss
+++ b/src/assets/helper/_menu.scss
@@ -1,5 +1,7 @@
 // 選單CSS
-
+.topMenu {
+    background-color: #000f28;
+}
 .logo {
     float: left;
 
@@ -129,6 +131,7 @@
 
 @media screen and (max-width:820px) {
     .mobileMenu {
+        display: block;
         width: 40px;
         height: 40px;
         border: none;
@@ -217,6 +220,8 @@
             text-decoration: none;
             background-color: #fff;
             color: #000F28;
+            width: 200px;
+            margin: 0 auto 12px auto;
         }
     }
 
