手機版篩選列表增加動畫&切換

--- a/src/assets/helper/_product.scss
+++ b/src/assets/helper/_product.scss
@@ -9,16 +9,20 @@
     padding-right: 0px !important;
     padding: 72px 0px;
     text-align: center;
+
     h3 {
         border-bottom: 1px solid #828282;
         padding-bottom: 20px;
     }
+
     ul {
         padding: 0;
     }
+
     li {
         list-style: none;
         font-size: 1.25em;
+
         &:first-child {
             color: #828282;
             font-weight: 700;
@@ -26,6 +30,7 @@
             pointer-events: none;
         }
     }
+
     button {
         width: 100%;
         padding: 9px 0px;
@@ -33,6 +38,7 @@
         color: #1E1E1E;
         border: none;
         background: none;
+
         &:hover {
             background: #C7C7C7;
         }
@@ -59,9 +65,11 @@
     align-items: center;
     margin-bottom: 18px;
     padding: 7px 20px;
+
     input {
         border: none;
         padding-left: 10px;
+
         &:focus-visible {
             outline: none;
         }
@@ -73,6 +81,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #828282;
+
     h3 {
         width: 50%;
     }
@@ -84,18 +93,22 @@
 
 .productsCard {
     padding: 26px 0 37px 0;
+
     a {
         text-decoration: none;
         transition: all 0.3s ease;
+
         &:hover {
             background: #f8f9fa;
         }
     }
+
     .card-title {
         font-size: 1em;
         font-weight: 700;
         margin-bottom: 7px;
     }
+
     .card-subtitle {
         color: #828282;
         font-weight: 400;
@@ -103,18 +116,21 @@
         font-size: 0.75em;
         white-space: pre-line;
     }
+
     .card-text {
         margin-top: 5px;
         line-height: 1.2em;
         text-align: justify;
         white-space: pre-line;
     }
+
     .card-footer {
         background-color: #fff;
         border-top: none;
         text-align: center;
         padding: 0;
     }
+
     .btn {
         border: none;
         border-top: 1px solid #cdcdcd;
@@ -122,6 +138,7 @@
         border-radius: 0 0 5px 5px;
         color: #9747FF;
         padding: 10px 0;
+
         &:hover {
             background: #9747FF;
             color: #fff;
@@ -133,9 +150,11 @@
     .classFilter {
         padding: 0px;
         background-color: #fff;
+
         h3 {
             display: none;
         }
+
         .mobileFilter {
             padding: 14px 5%;
             font-size: 1.25em;
@@ -144,11 +163,24 @@
             justify-content: space-between;
             color: #000F28;
         }
+
+        ul {
+            position: absolute;
+            width: 100%;
+        }
     }
+
     .pageTitle {
         border-bottom: none;
     }
+
     .searchBar {
         margin-bottom: 0px;
+    }
+
+    .filterMenuBox {
+        overflow: hidden;
+        height: 0px;
+        position: relative;
     }
 }
