--- a/src/assets/helper/_menu.scss
+++ b/src/assets/helper/_menu.scss
@@ -57,15 +57,26 @@
     right: -48px;
     top: 60px;
     overflow: hidden;
+    // border-radius: 15px;
 }
 .cartPreview {
-    background: #fff;
-    border-radius: 15px;
+    background: #ffffffc0;
+    backdrop-filter: blur(5px);
     padding: 20px 0;
     width: 320px;
+    list-style: none;
+    border-radius: 15px;
     li {
+        width: 100%;
         display: flex;
         align-items: center;
+        margin: 0;
+        padding: 0 8px;
+    }
+    i {
+        padding: 5px;
+        color: red;
+        font-size: 1.2em;
     }
 }
 .cartImg {
@@ -75,6 +86,11 @@
     background-position: center;
     border-radius: 5px;
     margin: 5px;
+}
+.cartText {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .userBtn {
@@ -113,7 +129,8 @@
     width: 160px;
     border-radius: 15px;
     text-align: center;
-    background-color: #fff;
+    background: #ffffffc0;
+    backdrop-filter: blur(5px);
 
     p {
         padding: 17px 0 9px 0;
