--- a/src/assets/helper/_menu.scss
+++ b/src/assets/helper/_menu.scss
@@ -2,6 +2,7 @@
 .topMenu {
     background-color: #000f28;
 }
+
 .logo {
     float: left;
 
@@ -52,6 +53,7 @@
     top: -8px;
     left: -8px;
 }
+
 .cartMenu {
     position: absolute;
     right: -48px;
@@ -59,6 +61,7 @@
     overflow: hidden;
     // border-radius: 15px;
 }
+
 .cartPreview {
     background: #ffffffc0;
     backdrop-filter: blur(5px);
@@ -66,6 +69,8 @@
     width: 320px;
     list-style: none;
     border-radius: 15px;
+    cursor: pointer;
+
     li {
         width: 100%;
         display: flex;
@@ -73,12 +78,18 @@
         margin: 0;
         padding: 0 8px;
     }
+
     i {
         padding: 5px;
         color: red;
         font-size: 1.2em;
+
+        &[disabled="true"] {
+            color: #ffb4b4;
+        }
     }
 }
+
 .cartImg {
     width: 60px;
     height: 60px;
@@ -87,6 +98,7 @@
     border-radius: 5px;
     margin: 5px;
 }
+
 .cartText {
     width: 70%;
     display: flex;
@@ -147,6 +159,7 @@
         padding: 7px 38px;
         margin-bottom: 12px;
     }
+
     & a:hover {
         color: #fff;
         background-color: #000917;
