修改一些登入登出時的狀態

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -7,6 +7,7 @@
 @import "./helper/login";
 @import "./helper/product";
 @import "./helper/productContent";
+@import "./helper/backstage";
 
 @import "../../node_modules/bootstrap/scss/mixins";
 @import "../../node_modules/bootstrap/scss/bootstrap";
