--- a/src/assets/helper/_productContent.scss
+++ b/src/assets/helper/_productContent.scss
@@ -139,9 +139,14 @@ input[type=number]::-webkit-inner-spin-button {
     text-align: center;
     font-weight: bold;
     cursor: pointer;
+    transition: all 0.3s ease;
 
     &:active {
         background: #ddd;
+    }
+
+    &:hover {
+        background: #dbdbdb;
     }
 }
 
