--- a/src/assets/helper/_cart.scss
+++ b/src/assets/helper/_cart.scss
@@ -116,8 +116,9 @@
     height: 80vh;
     overflow: hidden;
     .scrollBarStyle {
-        overflow: scroll;
+        overflow: overlay;
         padding: 30px;
+        height: 80vh;
         &::-webkit-scrollbar-track {
             -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
             background-color: #ffffff94;
@@ -148,7 +149,7 @@
         border-radius: 5px;
         color: #4B178E;
         min-height: 1.5em;
-        max-height: 14vh;
+        max-height: 12vh;
 
         &:focus {
             color: #4B178E;
