訂單流程調整完畢

--- a/src/assets/helper/_btn.scss
+++ b/src/assets/helper/_btn.scss
@@ -56,6 +56,13 @@
     }
 }
 
+.blueBtn {
+    background: #0C5DE3;
+    &:hover {
+        background: #0047ba;
+    }
+}
+
 .bigBtn {
     width: 100%;
 }
