--- a/src/assets/helper/_order.scss
+++ b/src/assets/helper/_order.scss
@@ -26,6 +26,7 @@
     width: 100%;
     display: block;
     padding: 30px 24px;
+    margin: 24px 0;
     box-shadow: 0px 2px 5px #9d9d9d38;
     border-radius: 7px;
     thead {
