--- a/src/assets/helper/_menu.scss
+++ b/src/assets/helper/_menu.scss
@@ -21,7 +21,7 @@
         margin: 0 0.5em;
     }
 
-    a {
+    a:not(.checkCart) {
         display: block;
         color: #fff;
         font-size: 1.1em;
@@ -32,7 +32,7 @@
         border: 2px solid #fff;
     }
 
-    a:hover {
+    a:hover                                                             {
         color: #FCFF71;
         box-shadow: 2px 2px 10px 0 rgba(255, 255, 255, .5),
             -4px -4px 6px 0 rgba(116, 125, 136, .2),
@@ -243,6 +243,20 @@
     opacity: 100%;
 }
 
+
+// 淺色的版本
+.lightMenu {
+    background-color: #F9F8F8;
+    border-bottom: 1px solid #C7C7C7;
+    .logo a {
+        background: url(/src/assets/image/logo-W.png);
+    }
+    .menu a:not(.checkCart), .userIcon {
+        color: #000f28;
+        border: 2px solid #000f28;
+    }
+}
+
 @media screen and (max-width:820px) {
     .mobileMenu {
         display: block;
@@ -296,6 +310,7 @@
         }
     }
 
+    // 展開動畫
     .menu-enter-active,
     .menu-leave-active {
         transition: all 0.5s ease-in-out;
@@ -313,12 +328,15 @@
         height: 100vh;
         opacity: 1;
     }
+    // 展開動畫結束
 
     .mobileUserIcon {
         display: block;
-
-        a {
-            border: none;
+        border: 2px solid #fff;
+        border-radius: 26px;
+        .nav-link {
+            border: none !important;
+            padding: 12px 0 !important;
         }
     }
 
@@ -327,9 +345,8 @@
         border-radius: 15px;
         background-color: transparent;
         border: 2px solid #fff;
-        color: #fff;
-
         a {
+            border: none;
             display: block;
             text-decoration: none;
             background-color: #fff;
@@ -340,13 +357,59 @@
     }
     .userMenu_loggedIn {
         width: 100%;
+        background: transparent;
+        backdrop-filter: none;
         a {
             display: inline-block;
-            width: 100px;
+            width: 100%;
+            margin: 0.8em 0;
+            padding: 0;
+            border: none !important;
+        }
+        p {
+            color: #fff;
+            padding: 0;
+            padding-bottom: 5px;
+            border-bottom: 1px solid #fff;
         }
     }
 
     .userBtn {
+        display: none;
+    }
+
+    .lightMenu {
+        .mobileMenu {
+            span {
+                background-color: #000F28;
+            }
+        }
+        .mobileUserIcon {
+            border: 2px solid #000F28;
+        }
+        .userMenu_loggedIn {
+            p {
+                color: #000f28;
+                padding: 0;
+                padding-bottom: 5px;
+                border-bottom: 1px solid #000F28;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:375px) {
+    .logo, .lightMenu .loge {
+        a {
+            width: 200px;
+            height: 60px;
+            background-size: cover !important;
+        }
+    }
+    .menu {
+        width: 70%;
+    }
+    .cartMenu {
         display: none;
     }
 }
