--- a/src/assets/helper/_productContent.scss
+++ b/src/assets/helper/_productContent.scss
@@ -160,3 +160,7 @@ input[type=number]::-webkit-inner-spin-button {
     border-radius: 0 4px 4px 0;
     margin-right: 30px;
 }
+
+@media screen and (max-width:425px) {
+    
+}
