--- a/src/assets/helper/_menu.scss
+++ b/src/assets/helper/_menu.scss
@@ -32,10 +32,16 @@
         border: 2px solid #fff;
     }
 
-    a:hover                                                             {
+    a:hover {
         color: #FCFF71;
         box-shadow: 2px 2px 10px 0 rgba(255, 255, 255, .5),
             -4px -4px 6px 0 rgba(116, 125, 136, .2),
+    }
+
+    a.active {
+        background-color: #FCFF71;
+        color: #000F28;
+        border: 2px solid #FCFF71;
     }
 }
 
